# ble-desk-controller

./: .gitignore  BLE_EXPLORATION.md  CLAUDE.md  Makefile  README.md  chat.py  pyproject.toml
ble_controller/: __init__.py  cli.py  controller.py  scanner.py
desk_mcp/: __init__.py  server.py
