[project]
name = "desk-controller"
version = "0.1.0"
description = "BLE controller for IKEA Idåsen / Linak standing desks with MCP server integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleak>=2.1.0",
    "fastmcp>=2.14.1",
    "langchain>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.6",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

# Optional: Native macOS CoreBluetooth bindings (for advanced scanning)
macos = [
    "pyobjc>=12.1",
    "pyobjc-core>=12.1",
    "pyobjc-framework-corebluetooth>=12.1",
]

[project.scripts]
desk-scan = "ble_controller.cli:main_scan"
desk-control = "ble_controller.cli:main_control"
desk-mcp = "desk_mcp.server:run_server"
desk-chat = "chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ble_controller", "desk_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # Line length handled by formatter
